fixed overflow added flexslider files

--- a/css/main.css
+++ b/css/main.css
@@ -275,12 +275,14 @@ h2 {
 	display: block;
 	text-align: left;
 	padding-right: 5rem;
+	overflow: visible;
 }
 
 .img-description-left {
 	text-align: right;
 	padding-right: 10px;
 	padding-left: 5rem;
+	overflow: visible;
 }
 
 .portfolio-img{
@@ -325,11 +327,13 @@ h2 {
 
 	.img-description {
 		padding-right: 10rem;
+		overflow: visible;
 	}
 
 	.img-description-left {
 		padding-right: 10px;
 		padding-left: 10rem;
+		overflow: visible;
 	}
 
 	.portfolio-sub-imgs {
